Resolve library and save paths ignoring case